--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "facade.main.java.Main",
+            "projectName": "design-patterns_33d5a8dd"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "adapter.main.java.Main",
+            "projectName": "design-patterns_33d5a8dd"
+        },
+        {
+            "type": "java",
             "name": "RemoteControl",
             "request": "launch",
             "mainClass": "command.main.java.RemoteControl",
